Social sharing improved

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -584,6 +584,10 @@ td a {
 // Donation
 // --------------------------------------------------
 
+.donation-box {
+  margin-top: 20px;
+}
+
 .donation-button:hover {
   background-color: $donation-color;
 } 
