--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,7 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
-<link rel="stylesheet" href="{{ "/assets/css/vendors/rrssb.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/assets/css/vendors/rrssb.scss" | prepend: site.baseurl }}">
 
 
 <!-- Webfonts -->
