--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,7 +17,7 @@ sitemap: false
 @import "reset";
 @import "vendor/font-awesome/font-awesome";
 @import "vendor/magnific-popup/magnific-popup";
-@import "vendor/rrssbb/rrssbb";
+@import "vendor/rrssb/rrssb";
 @import "site";
 @import "typography";
 @import "pygments";
