--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -594,7 +594,7 @@ td a {
 
 .donation-button {
   display: block;
-  margin: 10px;
+  margin-top: 10px;
   background-color: #b3b3b3;
   color: white !important;
   @include rounded(3px);
