--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -755,7 +755,9 @@ div#toc.hovered {
 
 #toc a:hover {
   position: relative;
-  left: -5px;
+  left: -3px;
+  -webkit-transition: margin-right 0.28s; /* Safari 3.1 to 6.0 */
+  transition: margin-right 0.28s;
 }
 
 #toc a:hover {
