--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -760,5 +760,8 @@ div#toc.hovered {
 
 #toc a:hover {
   margin-left: -3px;
-  background-color: red;
+  background: -webkit-linear-gradient(left,rgba(0,0,0,0),rgba(0,0,0,0.4)); /*Safari 5.1-6*/
+  background: -o-linear-gradient(right,rgba(0,0,0,0),rgba(0,0,0,0.4)); /*Opera 11.1-12*/
+  background: -moz-linear-gradient(right,rgba(0,0,0,0),rgba(0,0,0,0.4)); /*Fx 3.6-15*/
+  background: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.4)); /*Standard*/
 }
