--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -759,9 +759,10 @@ div#toc.hovered {
 }
 
 #toc a:hover {
+  color: black;
   margin-left: -3px;
-  background: -webkit-linear-gradient(left,rgba(255,255,255,0),rgba(255,255,255,0.4)); /*Safari 5.1-6*/
-  background: -o-linear-gradient(right,rgba(255,255,255,0),rgba(255,255,255,0.4)); /*Opera 11.1-12*/
-  background: -moz-linear-gradient(right,rgba(255,255,255,0),rgba(255,255,255,0.4)); /*Fx 3.6-15*/
-  background: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,0.4)); /*Standard*/
+  background: -webkit-linear-gradient(left,rgba(255,255,255,0),rgba(255,255,255,0.5)); /*Safari 5.1-6*/
+  background: -o-linear-gradient(right,rgba(255,255,255,0),rgba(255,255,255,0.5)); /*Opera 11.1-12*/
+  background: -moz-linear-gradient(right,rgba(255,255,255,0),rgba(255,255,255,0.5)); /*Fx 3.6-15*/
+  background: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,0.5)); /*Standard*/
 }
