--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -756,7 +756,7 @@ div#toc.hovered {
 #toc a {
   width: 200px;
   display: block;
-  transition: background-color 0.28s;
+  transition: all 0.28s;
 }
 
 #toc a:hover {
