--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -24,7 +24,7 @@
 <script type="text/javascript">
   $('a').click(function(){
       $('html, body').animate({
-          scrollTop: $('[name="' + $.attr(this, 'href').substr(1) + '"]').offset().top
+          scrollTop: $( $.attr(this, 'href') ).offset().top
       }, 500);
       return false;
   });
