--- a/_includes/repo_and_release.html
+++ b/_includes/repo_and_release.html
@@ -1,4 +1,4 @@
 <div class="half-centered-wrapper">
 <a href='{{ page.repo_link }}' class="btn-info btn half-centered"><i class="fa fa-github"></i> GitHub repository</a>
-<a href='{{ page.dowload_link }}' class="btn-success btn half-centered"><i class="fa fa-download"></i> Download {{ page.version }}</a>
+<a href='{{ page.repo_link }}/releases/latest' class="btn-success btn half-centered"><i class="fa fa-download"></i> Download {{ page.version }}</a>
 </div>
