--- a/_includes/entry-ribbon.html
+++ b/_includes/entry-ribbon.html
@@ -1,7 +1,12 @@
 <span class="entry-ribbons">
   <a href="{{ post.url }}#discussion" class="ribbon ribbon-conversation" title="Go to the discussion threads"><i class="fa fa-comments"></i></a>
+
+{% if post.download_link %}
+    <a href="{{ post.download_link }}" class="ribbon ribbon-release" title="Download {{ post.version }}"><i class="fa fa-download"></i></a>
+{% else %}
+    <a href="{{ post.repo_link }}/archive/{{ post.version }}.zip" class="ribbon ribbon-release" title="Download {{ post.version }}"><i class="fa fa-download"></i></a>
+{% endif %}
 {% if post.repo_link %}
-  <a href="{{ post.repo_link }}/archive/{{ post.version }}.zip" class="ribbon ribbon-release" title="Download {{ post.version }}"><i class="fa fa-download"></i></a>
   <a href="{{ post.repo_link }}" class="ribbon ribbon-repo" title="GitHub repository"><i class="fa fa-github"></i></a>
 {% endif %}
 </span>
