--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -84,7 +84,7 @@ body {
     height: $header-height;
     overflow: hidden;
     box-shadow: 0px 26px 25px inset;
-    background-image: url('/images/core/transparent-grain.png');
+    // background-image: url('/images/core/transparent-grain.png');
     .header-title-wrap {
         display: table-cell;
         vertical-align: middle;
@@ -120,9 +120,9 @@ body {
 }
 .entry-image {
     position: relative;
-    top: -50%; 
-    left: -50%; 
-    width: 200%; 
+    top: -50%;
+    left: -50%;
+    width: 200%;
     height: 200%;
     min-height: $header-height;
     overflow: hidden;
@@ -136,12 +136,12 @@ body {
         background-color: rgba($base-color,0.3);
     }
     img {
-        position: absolute; 
-        top: 0; 
-        left: 0; 
-        right: 0; 
-        bottom: 0; 
-        margin: auto; 
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
         min-width: 50%;
         min-height: $header-height; // match .entry-image min-height
     }
@@ -336,7 +336,7 @@ header .entry-meta {
     h3 {
         margin: 0;
         @include font-rem(28);
-        a { 
+        a {
             color: $text-color;
         }
         @media #{$medium} {
@@ -350,11 +350,11 @@ header .entry-meta {
 .list-item {
     width: 100%;
     text-align: left;
-    h4 { 
+    h4 {
         @include font-rem(18);
-        margin-bottom: 0; 
+        margin-bottom: 0;
     }
-    span { 
+    span {
         display: block;
         @include font-rem(14);
         color: lighten($base-color,50);
@@ -368,7 +368,7 @@ header .entry-meta {
     }
 }
 
-// Post Index 
+// Post Index
 // --------------------------------------------------
 #post-index {
     #main {
@@ -437,7 +437,7 @@ header .entry-meta {
 // --------------------------------------------------
 .socialcount {
     @include font-rem(16);
-    li { 
+    li {
         padding-left: 10px;
         padding-right: 10px;
     }
@@ -591,7 +591,7 @@ td a {
 
 .donation-button:hover {
   background-color: $donation-color;
-} 
+}
 
 .donation-button {
   display: block;
@@ -620,7 +620,7 @@ td a {
   padding: 5px;
   font-size: 98%;
   border: solid 1px $donation-color;
-}  
+}
 
 .donation-wrapper {
   text-align: center;
@@ -666,7 +666,7 @@ td a {
   color: white;
   @include rounded(3px);
   padding: 5px;
-} 
+}
 
 .donor-link:hover {
   background-color: $donation-color;
