--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -1814,14 +1814,12 @@ ol.default {
       margin: -0.5em 0 0 0;
       padding-top: 0; }
   .box h2 {
-    margin: 0 0 0.75em 0;
-    font-size: 1.15em;
-    letter-spacing: 0.05em; }
+    margin: 0.75em 0 0.75em 0;
+    font-size: 1.15em; }
   .box h3 {
-    margin: 0 0 0.5em 0;
+    margin: 0.75em 0 0.5em 0;
     font-size: 1em;
-    font-weight: 600;
-    letter-spacing: 0.05em; }
+    font-weight: 600; }
   .box.post-excerpt .image.left {
     position: relative;
     top: 0.5em;
