--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -1807,25 +1807,27 @@ ol.default {
   .feature-list.small p {
     margin: 0 0 0 4em; }
   /* Box */
-  .box header {
-    margin: 0 0 1.5em 0; }
-    .box header.style1 {
+  .box {
+    margin-bottom: 1em; }
+    .box header {
+      margin: 0 0 1.5em 0; }
+      .box header.style1 {
+        position: relative;
+        margin: -0.5em 0 0 0;
+        padding-top: 0; }
+    .box h2 {
+      margin: 0 0 0.75em 0;
+      font-size: 1.15em; }
+    .box h3 {
+      margin: 0 0 0.5em 0;
+      font-size: 1em;
+      font-weight: 600; }
+    .box.post-excerpt .image.left {
       position: relative;
-      margin: -0.5em 0 0 0;
-      padding-top: 0; }
-  .box h2 {
-    margin: 0.75em 0 0.75em 0;
-    font-size: 1.15em; }
-  .box h3 {
-    margin: 0.75em 0 0.5em 0;
-    font-size: 1em;
-    font-weight: 600; }
-  .box.post-excerpt .image.left {
-    position: relative;
-    top: 0.5em;
-    width: 5em; }
-  .box.post-excerpt h3, .box.post-excerpt p {
-    margin-left: 7em; }
+      top: 0.5em;
+      width: 5em; }
+    .box.post-excerpt h3, .box.post-excerpt p {
+      margin-left: 7em; }
   /* Wrappers */
   .wrapper {
     padding: 6em 0 4em 0; }
