--- a/theme/css/custom.css
+++ b/theme/css/custom.css
@@ -173,11 +173,11 @@
 
 /* github contribution calendar */
 .calendar-graph text.month {
-    display: none;
+    display: none !important;
 }
 .contrib-footer {
-    display: none;
+    display: none !important;
 }
 .calendar-graph text.month, .calendar-graph text.wday {
-    display: none;
+    display: none !important;
 }
