--- a/theme/css/bundle.css
+++ b/theme/css/bundle.css
@@ -9131,6 +9131,10 @@ button.close {
 
 /* github contribution calendar */
 
+.calendar {
+  overflow-x: auto;
+}
+
 .calendar-graph text.month {
   display: none !important;
 }
