--- a/theme/css/bundle.css
+++ b/theme/css/bundle.css
@@ -8935,34 +8935,6 @@ button.close {
   background-color: #000;
 }
 
-.jslghtbx-thmb {
-  padding: 2px;
-  max-width: 100%;
-  max-height: 140px;
-  cursor: pointer;
-  box-shadow: 0px 0px 3px 0px #000;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-}
-
-@media screen and (min-width: 451px) {
-  .jslghtbx-thmb {
-    margin: 1em;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .jslghtbx-thmb {
-    margin: 1em 0;
-  }
-}
-
-.jslghtbx-thmb:hover {
-  box-shadow: 0px 0px 14px 0px #000;
-}
-
 /*  T O R T E X - T I M E  */
 
 .tortex-time-wrapper:after {
@@ -11907,6 +11879,7 @@ you can use the generic selector below, but it's slower:
 }
 
 .jslghtbx.jslghtbx-active {
+  z-index: 999999999999;
   visibility: visible;
   background-color: rgba(0,0,0,.85);
 }
@@ -12134,7 +12107,6 @@ you can use the generic selector below, but it's slower:
   max-width: 100%;
   max-height: 140px;
   cursor: pointer;
-  box-shadow: 0 0 3px 0 #000;
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   -o-transition: all .3s ease-in-out;
@@ -12151,10 +12123,6 @@ you can use the generic selector below, but it's slower:
   .jslghtbx-thmb {
     margin: 1em 0;
   }
-}
-
-.jslghtbx-thmb:hover {
-  box-shadow: 0 0 14px 0 #000;
 }
 /* Magnific Popup CSS */
 
