--- a/theme/css/custom.css
+++ b/theme/css/custom.css
@@ -170,3 +170,8 @@
 .calendar-graph text.month, .calendar-graph text.wday {
     display: none !important;
 }
+
+/* timeline  */
+.vis-timeline {
+    border: 1px solid rgba(191, 191, 191, 0) !important;
+}
