--- a/theme/css/custom.css
+++ b/theme/css/custom.css
@@ -171,3 +171,14 @@
     display: none !important;
 }
 
+
+#timeline .menu {
+    position: absolute;
+    z-index: 9999999999999999999999999999;
+    margin: 10px;
+    opacity: 0.3;
+    transition: opacity 0.2s ease-in-out;
+}
+#timeline .menu:hover {
+    opacity: 1;
+}
