--- a/theme/css/custom.css
+++ b/theme/css/custom.css
@@ -172,13 +172,12 @@
 }
 
 
-#timeline .menu {
-    position: absolute;
-    z-index: 9999999999999999999999999999;
-    margin: 10px;
-    opacity: 0.3;
-    transition: opacity 0.2s ease-in-out;
+/* timeline */
+.timeline-help {
+    text-align: center;
+    font-size: 11px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #aaa;
 }
-#timeline .menu:hover {
-    opacity: 1;
-}
+
