--- a/theme/css/bundle.css
+++ b/theme/css/bundle.css
@@ -9124,16 +9124,14 @@ button.close {
   display: none !important;
 }
 
-#timeline .menu {
-  position: absolute;
-  z-index: 9999999999999999999999999999;
-  margin: 10px;
-  opacity: 0.3;
-  transition: opacity 0.2s ease-in-out;
-}
+/* timeline */
 
-#timeline .menu:hover {
-  opacity: 1;
+.timeline-help {
+  text-align: center;
+  font-size: 11px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #aaa;
 }
 @font-face {
   font-family: 'et-line';
@@ -25934,6 +25932,7 @@ section:hover .small-item-carousel .owl-next {
   left: 0;
   width: 100%;
   height: 100%;
+  font-family: Dosis, arial, sans-serif;
   /* Must be displayed above for example selected Timeline items */
   z-index: 10;
 }
@@ -26424,17 +26423,21 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 
 .vis-item {
   position: absolute;
-  color: #1A1A1A;
-  border-color: #97B0F8;
+  color: #aaa;
+  border-color: #ddd;
   border-width: 1px;
-  background-color: #D5DDF6;
+  background-color: #fff;
   display: inline-block;
   /*overflow: hidden;*/
+  font-family: "Open Sans", arial, sans-serif;
+  line-height: 1.6;
+  font-weight: 300;
 }
 
 .vis-item.vis-selected {
-  border-color: #FFC200;
-  background-color: #FFF785;
+  border-color: #aed450;
+  color: #7ea545;
+  background-color: #dbf7a7;
   /* z-index must be higher than the z-index of custom time bar and current time bar */
   z-index: 2;
 }
@@ -26444,7 +26447,7 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 }
 
 .vis-item.vis-point.vis-selected {
-  background-color: #FFF785;
+  background-color: #dbf7a7;
 }
 
 .vis-item.vis-box {
@@ -26580,10 +26583,11 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 
 .vis-time-axis .vis-text {
   position: absolute;
-  color: #4d4d4d;
+  color: #aaa;
   padding: 3px;
   overflow: hidden;
   box-sizing: border-box;
+  font-family: Dosis, arial, sans-serif;
   white-space: nowrap;
 }
 
@@ -26615,7 +26619,7 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 }
 
 .vis-current-time {
-  background-color: #FF7F6E;
+  background-color: #91cd4a;
   width: 2px;
   z-index: 1;
 }
@@ -26694,7 +26698,7 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 .vis-data-axis .vis-y-axis.vis-minor {
   position: absolute;
   width: 100%;
-  color: #bebebe;
+  color: #aaa;
   white-space: nowrap;
 }
 
@@ -26708,7 +26712,7 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 
 .vis-data-axis .vis-y-axis.vis-title {
   position: absolute;
-  color: #4d4d4d;
+  color: #aaa;
   white-space: nowrap;
   bottom: 20px;
   text-align: center;
