--- a/theme/css/vis.css
+++ b/theme/css/vis.css
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  font-family: Dosis, arial, sans-serif;
 
   /* Must be displayed above for example selected Timeline items */
   z-index: 10;
@@ -466,20 +467,23 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 
 .vis-item {
   position: absolute;
-  color: #1A1A1A;
-  border-color: #97B0F8;
+  color: #aaa;
+  border-color: #ddd;
   border-width: 1px;
-  background-color: #D5DDF6;
+  background-color: #fff;
   display: inline-block;
   /*overflow: hidden;*/
+  font-family: "Open Sans", arial, sans-serif;
+  line-height: 1.6;
+  font-weight: 300;
 }
 
 .vis-item.vis-selected {
-  border-color: #FFC200;
-  background-color: #FFF785;
-
-  /* z-index must be higher than the z-index of custom time bar and current time bar */
-  z-index: 2;
+    border-color: #aed450;
+    color: #7ea545;
+    background-color: #dbf7a7;
+    /* z-index must be higher than the z-index of custom time bar and current time bar */
+    z-index: 2;
 }
 
 .vis-editable.vis-selected {
@@ -487,7 +491,7 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 }
 
 .vis-item.vis-point.vis-selected {
-  background-color: #FFF785;
+    background-color: #dbf7a7;
 }
 
 .vis-item.vis-box {
@@ -626,11 +630,11 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 
 .vis-time-axis .vis-text {
   position: absolute;
-  color: #4d4d4d;
+  color: #aaa;
   padding: 3px;
   overflow: hidden;
   box-sizing: border-box;
-
+  font-family: Dosis, arial, sans-serif;
   white-space: nowrap;
 }
 
@@ -662,7 +666,7 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 }
 
 .vis-current-time {
-  background-color: #FF7F6E;
+  background-color: #91cd4a;
   width: 2px;
   z-index: 1;
 }
@@ -741,7 +745,7 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 .vis-data-axis .vis-y-axis.vis-minor {
   position: absolute;
   width: 100%;
-  color: #bebebe;
+  color: #aaa;
   white-space: nowrap;
 }
 
@@ -755,7 +759,7 @@ input.vis-configuration.vis-config-range:focus::-ms-fill-upper {
 
 .vis-data-axis .vis-y-axis.vis-title {
   position: absolute;
-  color: #4d4d4d;
+  color: #aaa;
   white-space: nowrap;
   bottom: 20px;
   text-align: center;
