--- a/css/style.css
+++ b/css/style.css
@@ -644,54 +644,57 @@ table {
  * google-material-color v1.2.6
  * https://github.com/danlevan/google-material-color
  */
-.multibox {
+.multibox-card {
   width: 673px;
-  height: 277px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: flex-start; }
-  .multibox input {
-    visibility: hidden;
-    height: 0;
-    width: 0; }
-  .multibox label {
-    background: white;
-    color: rgba(0, 0, 0, 0.87);
-    cursor: pointer;
-    display: block;
-    font-size: 1em;
-    height: 2.5em;
-    width: 100px;
-    line-height: 2.5em;
-    text-align: center;
-    text-transform: uppercase;
-    border-radius: 2px;
-    z-index: 1; }
-  .multibox input:hover + label {
-    background: rgba(0, 0, 0, 0.12); }
-  .multibox input:checked + label {
-    background: var(--main-color);
-    color: white;
-    font-weight: 600;
-    box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
-    z-index: 2; }
-  .multibox .contents {
-    width: 515px;
-    height: 239px; }
-  .multibox .contents > div {
-    position: absolute;
-    width: 515px;
-    height: 239px;
-    overflow-y: auto;
-    z-index: 1;
-    background: white; }
-  .multibox #tab-1:checked ~ .contents #content-1,
-  .multibox #tab-2:checked ~ .contents #content-2,
-  .multibox #tab-3:checked ~ .contents #content-3,
-  .multibox #tab-4:checked ~ .contents #content-4,
-  .multibox #tab-5:checked ~ .contents #content-5 {
-    z-index: 2; }
+  height: 277px; }
+  .multibox-card .multibox {
+    width: 673px;
+    height: 277px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start; }
+    .multibox-card .multibox input {
+      visibility: hidden;
+      height: 0;
+      width: 0; }
+    .multibox-card .multibox label {
+      background: white;
+      color: rgba(0, 0, 0, 0.87);
+      cursor: pointer;
+      display: block;
+      font-size: 1em;
+      height: 2.5em;
+      width: 100px;
+      line-height: 2.5em;
+      text-align: center;
+      text-transform: uppercase;
+      border-radius: 2px;
+      z-index: 1; }
+    .multibox-card .multibox input:hover + label {
+      background: rgba(0, 0, 0, 0.12); }
+    .multibox-card .multibox input:checked + label {
+      background: var(--main-color);
+      color: white;
+      font-weight: 600;
+      box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
+      z-index: 2; }
+    .multibox-card .multibox .contents {
+      width: 515px;
+      height: 239px; }
+    .multibox-card .multibox .contents > div {
+      position: absolute;
+      width: 515px;
+      height: 239px;
+      overflow-y: auto;
+      z-index: 1;
+      background: white; }
+    .multibox-card .multibox #tab-1:checked ~ .contents #content-1,
+    .multibox-card .multibox #tab-2:checked ~ .contents #content-2,
+    .multibox-card .multibox #tab-3:checked ~ .contents #content-3,
+    .multibox-card .multibox #tab-4:checked ~ .contents #content-4,
+    .multibox-card .multibox #tab-5:checked ~ .contents #content-5 {
+      z-index: 2; }
 
 /**
  * google-material-color v1.2.6
@@ -817,52 +820,45 @@ section {
   justify-content: space-between;
   align-items: flex-start; }
   .articles-wrapper .articles {
-    box-sizing: border-box;
     width: 800px; }
     .articles-wrapper .articles article {
-      background: white;
-      transition: all 0.2s ease;
-      box-sizing: border-box;
-      display: flex;
-      width: 100%; }
-      .articles-wrapper .articles article .details {
-        width: 100%; }
-        .articles-wrapper .articles article .details hr {
-          width: 800px;
-          position: relative;
-          left: calc(-1*var(--content-padding));
-          margin: 0;
-          margin-bottom: 12px;
-          border: none;
-          border-top: 1px solid rgba(0, 0, 0, 0.12);
-          box-sizing: border-box; }
-        .articles-wrapper .articles article .details.with-thumbnail {
+      transition: all 0.2s ease; }
+      .articles-wrapper .articles article .details hr {
+        width: 800px;
+        position: relative;
+        left: calc(-1*var(--content-padding));
+        margin: 0;
+        margin-bottom: 12px;
+        border: none;
+        border-top: 1px solid rgba(0, 0, 0, 0.12);
+        box-sizing: border-box; }
+      .articles-wrapper .articles article .details.with-thumbnail {
+        width: 600px; }
+        .articles-wrapper .articles article .details.with-thumbnail hr {
           width: 600px; }
-          .articles-wrapper .articles article .details.with-thumbnail hr {
-            width: 600px; }
-        .articles-wrapper .articles article .details header {
-          display: flex;
-          justify-content: space-between;
-          align-items: baseline; }
-        .articles-wrapper .articles article .details h2 {
-          margin-bottom: 3px; }
-          .articles-wrapper .articles article .details h2 > a {
-            text-decoration: none;
-            color: var(--main-color);
-            transition: all 0.2s ease;
+      .articles-wrapper .articles article .details header {
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline; }
+      .articles-wrapper .articles article .details h2 {
+        margin-bottom: 3px; }
+        .articles-wrapper .articles article .details h2 > a {
+          text-decoration: none;
+          color: var(--main-color);
+          transition: all 0.2s ease;
+          position: relative;
+          left: 0px; }
+          .articles-wrapper .articles article .details h2 > a:hover {
             position: relative;
-            left: 0px; }
-            .articles-wrapper .articles article .details h2 > a:hover {
-              position: relative;
-              left: 5px; }
-        .articles-wrapper .articles article .details .timestamp {
-          font-size: 0.8em;
-          color: rgba(0, 0, 0, 0.26);
-          position: relative; }
-        .articles-wrapper .articles article .details .snippet {
-          margin-bottom: 10px; }
-        .articles-wrapper .articles article .details .tag-list {
-          margin: 0; }
+            left: 5px; }
+      .articles-wrapper .articles article .details .timestamp {
+        font-size: 0.8em;
+        color: rgba(0, 0, 0, 0.26);
+        position: relative; }
+      .articles-wrapper .articles article .details .snippet {
+        margin-bottom: 10px; }
+      .articles-wrapper .articles article .details .tag-list {
+        margin: 0; }
       .articles-wrapper .articles article .image {
         background: var(--main-color);
         width: 200px;
@@ -1083,10 +1079,12 @@ section {
  * google-material-color v1.2.6
  * https://github.com/danlevan/google-material-color
  */
+nav .navmenu-wrapper {
+  width: 100%; }
+
 nav .navmenu {
   display: flex;
   justify-content: space-between;
-  width: 100%;
   color: rgba(0, 0, 0, 0.87); }
   nav .navmenu .logo {
     font-size: 1.4em;
@@ -1149,10 +1147,11 @@ nav .navmenu {
     font-weight: 400;
     line-height: 1em; }
   .article header .details {
+    border-top: solid 1px rgba(0, 0, 0, 0.12);
     display: flex;
     justify-content: space-between;
     color: rgba(0, 0, 0, 0.54);
-    padding: 0 30px 10px; }
+    padding: 0 30px 0; }
     .article header .details .timestamp {
       font-size: 1.4em;
       display: flex;
@@ -1307,7 +1306,8 @@ nav .navmenu {
       text-decoration: none;
       background: var(--main-color);
       color: white;
-      transition: all 0.2s ease; }
+      transition: all 0.2s ease;
+      font-size: 0.9em; }
     .sidebar .sidebar-nav .previous-a:hover ~ .previous-title {
       height: 41px;
       padding: 10px; }
@@ -1325,7 +1325,6 @@ nav .navmenu {
   flex-wrap: wrap;
   width: var(--wrapper-width);
   margin: 0 auto;
-  box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
   background: white; }
   .portfolio-list .portfolio-item {
     width: var(--portfolio-item-width);
@@ -1355,8 +1354,12 @@ nav .navmenu {
           flex-direction: column;
           vertical-align: middle;
           padding: 20px; }
-          .portfolio-list .portfolio-item figure figcaption .overlay h2 {
-            font-weight: 400; }
+          .portfolio-list .portfolio-item figure figcaption .overlay .title {
+            color: white;
+            font-weight: 400;
+            font-size: 2em;
+            margin-bottom: 25px;
+            line-height: 1em; }
           .portfolio-list .portfolio-item figure figcaption .overlay small {
             color: rgba(255, 255, 255, 0.7); }
           .portfolio-list .portfolio-item figure figcaption .overlay a {
