--- a/css/compiled.css
+++ b/css/compiled.css
@@ -70,9 +70,11 @@ table {
   flex-direction: column; }
 
 .card {
-  box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.06), 0 1.5px 6px rgba(0, 0, 0, 0.07);
   background: white;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  border-radius: 3px;
+  overflow: hidden; }
   .card h2 {
     margin: 0 0 13px;
     color: rgba(0, 0, 0, 0.54); }
