--- a/css/style.css
+++ b/css/style.css
@@ -563,7 +563,7 @@ template {
   --header-height: 390px;
   --content-width: 800px;
   --content-padding: 19px;
-  --margin-between-cards: 20px;
+  --margin-between-cards: 14px;
   --main-color: #1565C0;
   --hover-color: #039BE5;
   --active-color: #03A9F4;
@@ -583,13 +583,17 @@ body {
   font-size: 15px;
   color: #404040;
   overflow-y: scroll;
-  background: radial-gradient(circle at top, #3f5365, #1a373e 700px);
+  background: radial-gradient(circle at top, #4e7f94, #1a373e 1000px);
   font-family: "Lato","proxima-nova","Helvetica Neue",Arial,sans-serif;
   line-height: 1.3em; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
   line-height: 1em; }
+
+.my-name {
+  font-size: 1.5em;
+  margin-bottom: 25px; }
 
 .flexwrap {
   margin: 0 auto;
@@ -606,9 +610,9 @@ h1, h2, h3, h4, h5, h6 {
   flex-direction: column; }
 
 .card {
-  box-shadow: 0 17px 16px -14px rgba(0, 0, 0, 0.82);
+  box-shadow: 0 17px 12px -14px rgba(0, 0, 0, 0.82);
   background: #fcfcfc;
-  margin-bottom: 20px;
+  margin-bottom: var(--margin-between-cards);
   border-radius: 4px;
   overflow: hidden; }
   .card h2 {
@@ -616,8 +620,8 @@ h1, h2, h3, h4, h5, h6 {
     color: rgba(0, 0, 0, 0.54); }
 
 .avatar {
-  width: 270px;
-  height: 270px; }
+  width: 264px;
+  height: 264px; }
 
 .padded {
   padding: var(--content-padding); }
@@ -811,7 +815,7 @@ section {
     line-height: 1em;
     margin: 0; }
   .articles-wrapper .articles {
-    width: 800px; }
+    width: 806px; }
     .articles-wrapper .articles article {
       transition: all 0.2s ease; }
       .articles-wrapper .articles article .details hr {
@@ -914,7 +918,7 @@ section {
   height: 380px !important; }
 
 .twitter-card {
-  height: 450px; }
+  height: 444px; }
 
 .timeline-Header {
   display: none !important; }
@@ -970,7 +974,7 @@ section {
   --header-height: 390px;
   --content-width: 800px;
   --content-padding: 19px;
-  --margin-between-cards: 20px;
+  --margin-between-cards: 14px;
   --main-color: #1565C0;
   --hover-color: #039BE5;
   --active-color: #03A9F4;
@@ -991,7 +995,7 @@ section {
   flex-direction: row;
   flex-wrap: wrap; }
   .tag-list a {
-    color: #757575;
+    color: #616161;
     text-decoration: none;
     font-weight: 400;
     font-size: var(--font-size);
